<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/frame_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
    >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/sign_in_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/background_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/splash_night"
            />

        <TextView
            android:id="@+id/hello"
            style="@style/WeatherTextView.LandingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_s"
            android:layout_marginEnd="@dimen/space_s"
            android:text="@string/login_hello"
            app:layout_anchor="@id/description"
            app:layout_anchorGravity="top|start"
            android:layout_gravity="top"
            android:alpha="0"
            />

        <TextView
            android:id="@+id/description"
            style="@style/WeatherTextView.LandingDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_s"
            android:layout_marginEnd="@dimen/space_s"
            android:text="@string/description"
            android:contentDescription="@string/description"
            android:paddingBottom="@dimen/space_l"
            app:layout_anchor="@id/sign_in_bottom_sheet"
            app:layout_anchorGravity="top|start"
            android:layout_gravity="top"
            android:alpha="0"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/sign_in_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/bottom_sheet_behavior"
            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/landing_signin_card"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/space"
                />

            <Space
                android:id="@+id/space"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_l"
                app:layout_constraintBottom_toTopOf="@id/signin"
                />

            <Button
                android:id="@+id/signin"
                style="@style/WeatherButton.Primary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_s"
                android:layout_marginStart="@dimen/space_s"
                android:text="@string/login_sign_in"
                app:layout_constraintBottom_toTopOf="@id/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <Button
                android:id="@+id/register"
                style="@style/WeatherButton.Secondary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_xl"
                android:text="@string/login_register"
                app:layout_constraintBottom_toTopOf="@id/spacer1"
                app:layout_constraintEnd_toEndOf="@id/signin"
                app:layout_constraintStart_toStartOf="@id/signin"
                />

            <TextView
                android:id="@+id/support"
                style="@style/WeatherTextView.Tiny.WarmGray"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_xs"
                android:gravity="end"
                android:padding="@dimen/space_xs"
                android:text="@string/login_support"
                app:layout_constraintBottom_toBottomOf="@+id/spacer1"
                app:layout_constraintEnd_toStartOf="@+id/spacer1"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/spacer1"
                />

            <View
                android:id="@+id/spacer1"
                style="@style/LandingSpacer"
                android:layout_marginBottom="@dimen/landing_light_text_bottom_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/terms"
                app:layout_constraintStart_toEndOf="@+id/support"
                />

            <TextView
                android:id="@+id/terms"
                style="@style/WeatherTextView.Tiny.WarmGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="@dimen/landing_light_terms_width"
                android:padding="@dimen/space_xs"
                android:text="@string/login_terms"
                app:layout_constraintBottom_toBottomOf="@+id/spacer1"
                app:layout_constraintEnd_toStartOf="@+id/spacer2"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/spacer1"
                app:layout_constraintTop_toTopOf="@+id/spacer1"
                />

            <View
                android:id="@+id/spacer2"
                style="@style/LandingSpacer"
                app:layout_constraintBottom_toBottomOf="@+id/spacer1"
                app:layout_constraintEnd_toStartOf="@+id/privacy"
                app:layout_constraintStart_toEndOf="@+id/terms"
                app:layout_constraintTop_toTopOf="@+id/spacer1"
                />

            <TextView
                android:id="@+id/privacy"
                style="@style/WeatherTextView.Tiny.WarmGray"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_xs"
                android:gravity="start"
                android:padding="@dimen/space_xs"
                android:text="@string/login_privacy"
                app:layout_constraintBottom_toBottomOf="@+id/spacer1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/spacer2"
                app:layout_constraintTop_toTopOf="@+id/spacer1"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</FrameLayout>
