<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?selectableItemBackground"
    android:minHeight="48dp"
    >

    <View
        android:layout_width="4dp"
        android:layout_height="0dp"
        android:background="@color/accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/day_item_label"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="2sp"
        android:textAlignment="textStart"
        android:textColor="#616365"
        android:textSize="17sp"
        android:textStyle="normal"
        android:text="@string/day"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
    android:id="@+id/day_item_icon_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif"
    android:letterSpacing="0.01"
    android:lineSpacingExtra="2sp"
    android:textAlignment="textEnd"
    android:textColor="#a7a9ac"
    android:textSize="17sp"
    android:textStyle="normal"
    android:src="@drawable/ic_cloud"
    android:layout_marginStart="@dimen/space_xl"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toEndOf="@id/day_item_label"
    app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
        android:id="@+id/day_temp_min_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="2sp"
        android:textAlignment="textEnd"
        android:textColor="#a7a9ac"
        android:textSize="17sp"
        android:textStyle="normal"
        android:text="@string/minTemp"
        android:layout_marginStart="@dimen/space_xl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/day_item_icon_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/day_temp_max_label"
        />

    <TextView
        android:id="@+id/day_temp_max_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="2sp"
        android:textAlignment="textEnd"
        android:textColor="#a7a9ac"
        android:textSize="17sp"
        android:textStyle="normal"
        android:text="@string/maxTemp"
        android:layout_marginStart="@dimen/space_m"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/day_temp_min_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/very_light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
